# Machine_Learning

./: .gitignore  CMakeLists.txt  README.md
algor_knn/: CMakeLists.txt
algor_knn/include/: knn.h
algor_knn/src/: knn.cpp  main.cpp
include/: data.h  data_handler.h
src/: data.cpp  data_handler.cpp  main.cpp
